announcements no longer overlap, announcements are added to the final text string to be displayed one at a time

--- a/apps/frontend/src/components/styles/HomeAnnounce.css
+++ b/apps/frontend/src/components/styles/HomeAnnounce.css
@@ -3,13 +3,14 @@
   position: absolute;
   overflow: hidden;
   border-style: solid;
-  border-width: 5px;
+  border-width: 8px;
   border-left: none;
   border-right: none;
   border-bottom: none;
+  box-shadow: 0 -4px 5px;
   width: 100%;
-  height: 30px;
-  background-color: hotpink;
+  height: 55px;
+  background-color: #0d4c92;
 }
 
 .announcements-heading {
@@ -21,10 +22,15 @@
 .marquee {
   white-space: nowrap;
   display: inline-block;
+  font-family:
+    DejaVu Sans Mono,
+    monospace;
+  font-size: 32px;
+  color: #ffffff;
   width: 100%;
   margin: 0;
   text-align: right;
   transform: translateX(100%);
   position: fixed;
-  bottom: 0px;
+  bottom: 0;
 }
